Fix #8 Loading box causes jumpiness.

--- a/http/css/style.less
+++ b/http/css/style.less
@@ -410,6 +410,10 @@ nav .nav-tabs>li {
     display: none !important;
 }
 
+.visNone {
+    visibility: hidden;
+}
+
 .fdnavbar {
     width: 95%;
 }
